--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:title" content="Request Network - Accept & manage crypto payments" />
     <meta property="og:description" content="Accept & manage crypto payments easily by yourself. Accept crypto, manage funds, automate payments, all in one platform, via API or dashboard." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://request.network/images/og-image.png" />
+    <meta property="og:url" content="https://request.network/" />
+    <meta property="og:image" content="https://yourdomain.com/images/request-network.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RequestNetwork" />
