Update Open Graph tags for link preview

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Accept & manage crypto payments easily by yourself. Accept crypto, manage funds, automate payments, all in one platform, via API or dashboard." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://request.network/" />
-    <meta property="og:image" content="https://yourdomain.com/images/request-network.png" />
+    <meta property="og:image" content="https://request.network/images/request-network.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@RequestNetwork" />
